@@ -1,6 +1,7 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.016001 at Fri Jun 27 00:03:39 2014
+; vim: syntax=dosini
 name             = Color-Swatch-ASE-Reader
-author           = Kent Fredric <kentfredric@gmail.com>
+author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -9,7 +10,6 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
 :version          = 2.016001
-git_versions      = 1
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
@@ -17,7 +17,7 @@ toolkit_hardness  = soft
 bumpversions      = 1
 copyfiles         = LICENSE
 srcreadme         = mkdn
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 
 [Prereqs]
