@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001004
+ [Added / configure requires]
+ - perl 5.010
+
+ [Added / test requires]
+ - perl 5.010
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.001003 2014-08-16T05:38:21Z
  [Added / test requires]
@@ -17,4 +25,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 0.001002 2014-06-29T03:57:50Z
 
 0.001001 2014-06-27T19:27:46Z
-
