@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001004
+ [Added / runtime recommends]
+ - Path::Tiny 0.058
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 0.001003 2014-08-16T05:38:21Z
  [Changed / test recommends]
@@ -12,4 +21,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.001002 2014-06-29T03:57:50Z
 
 0.001001 2014-06-27T19:27:46Z
-
